--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -105,7 +105,7 @@ jobs:
           RUN dpkg -i /tmp/bngblaster.deb || apt-get update && apt-get install -f -y && \
               rm -rf /var/lib/apt/lists/* /tmp/*.deb
 
-          ENTRYPOINT ["service ssh restart && bash"]
+          ENTRYPOINT bash
           EOF
 
       - name: Log in to GitHub Container Registry
