--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Generate Dockerfile dynamically
         run: |
           cat <<EOF > Dockerfile
-          FROM debian:bullseye-slim
+          FROM FROM ubuntu:latest
 
           USER root:root
           RUN echo 'root:admin' | chpasswd
@@ -89,7 +89,7 @@ jobs:
           WORKDIR ./opt/bngblaster
 
           RUN apt-get update && \
-              apt-get install -y sudo iproute2 iputils-ping openssh-server && \
+              apt-get install -y sudo iproute2 iputils-ping openssh-server iproute2 iputils-ping vim wget && \
               apt-get clean && rm -rf /var/lib/apt/lists/*
 
           # Config SSH
@@ -103,10 +103,9 @@ jobs:
               usermod -aG sudo admin && \
               echo "admin ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
-          COPY *.deb /root/bngblaster.deb
-
-          RUN dpkg -i /root/bngblaster.deb || apt-get update && apt-get install -f -y && \
-              rm -rf /var/lib/apt/lists/*
+          # Get and install BngBlaster
+          RUN wget -O /tmp/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb https://github.com/rtbrick/bngblaster/releases/download/$TAG_NAME/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb
+          RUN apt-get install -y /tmp/bngblaster-$TAG_NAME-ubuntu-22.04_amd64.deb
 
           ENTRYPOINT bash
           EOF
