--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Generate Dockerfile dynamically
         run: |
           cat <<EOF > Dockerfile
-          FROM FROM ubuntu:latest
+          FROM ubuntu:latest
 
           USER root:root
           RUN echo 'root:admin' | chpasswd
