--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -18,47 +18,6 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Download RtBrick libdict
-        run: wget https://github.com/rtbrick/libdict/releases/download/1.0.4/libdict-ubuntu-22.04.zip
-
-      - name: Install RtBrick libdict
-        run: unzip libdict-ubuntu-22.04.zip && sudo dpkg -i libdict_1.0.4_amd64.deb && sudo dpkg -i libdict-dev_1.0.4_amd64.deb
-
-      - name: Install Dependencies
-        run: sudo apt install -y libcunit1-dev libncurses-dev libssl-dev libjansson-dev libcmocka-dev libpcap-dev
-
-      - name: Set SOURCE_DATE_EPOCH for reproducible builds
-        run: echo "SOURCE_DATE_EPOCH=$(git log -1 --format=%ct)" >> $GITHUB_ENV
-
-      - name: Create Build Directory
-        run: cmake -E make_directory ${{ github.workspace }}/build
-
-      - name: Configure with CMake
-        working-directory: ${{ github.workspace }}/build
-        run: cmake $GITHUB_WORKSPACE \
-            -DGIT_REF=$GITHUB_REF \
-            -DGIT_SHA=$GITHUB_SHA \
-            -DBNGBLASTER_TESTS=ON \
-            -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
-            -DBNGBLASTER_OS=ubuntu-22.04
-
-      - name: Build
-        working-directory: ${{ github.workspace }}/build
-        run: cmake --build . --config $BUILD_TYPE
-
-      - name: Run Tests
-        working-directory: ${{ github.workspace }}/build
-        run: ctest -C $BUILD_TYPE
-
-      - name: Package as DEB
-        working-directory: ${{ github.workspace }}/build
-        run: cpack -G DEB
 
       - name: Set Docker version tag
         id: vars
@@ -74,12 +33,9 @@ jobs:
           echo "✅ Using tag: $TAG_NAME"
           echo "version=$TAG_NAME" >> $GITHUB_OUTPUT
 
-      - name: Copy DEB to build context
-        run: cp ${{ github.workspace }}/build/*.deb ${{ github.workspace }}
-
-
       - name: Generate Dockerfile dynamically
         run: |
+          TAG_NAME="${{ steps.vars.outputs.version }}"
           cat <<EOF > Dockerfile
           FROM ubuntu:latest
 
