--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -63,6 +63,9 @@ jobs:
           RUN wget -O /tmp/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb https://github.com/rtbrick/bngblaster/releases/download/$TAG_NAME/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb
           RUN apt-get install -y /tmp/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb
 
+          # Copy bngblaster config file example folder
+          COPY ./examples /opt/bngblaster/
+
           ENTRYPOINT bash
           EOF
 
