--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -51,7 +51,7 @@ jobs:
           WORKDIR ./opt/bngblaster
 
           RUN apt-get update && \
-              apt-get install -y sudo iproute2 iputils-ping openssh-server libcunit1-dev libncurses-dev libssl-dev libjansson-dev libcmocka-dev libpcap-dev jq && \
+              apt-get install -y sudo iproute2 iputils-ping openssh-server vim wget libcunit1-dev libncurses-dev libssl-dev libjansson-dev libcmocka-dev libpcap-dev libjansson4 jq && \
               apt-get clean && rm -rf /var/lib/apt/lists/*
 
           # Config SSH
@@ -60,18 +60,22 @@ jobs:
           RUN service ssh restart
 
           # Create admin user with sudo access
-          RUN useradd -m -s /bin/bash admin && \
-              echo "admin:admin" | chpasswd && \
-              usermod -aG sudo admin && \
-              echo "admin ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+          RUN useradd -rm -d /home/ubuntu -s /bin/bash -g root -G sudo -u 1001 suuser \
+              && echo 'suuser:suuser' | chpasswd \
+              && useradd -rm -d /home/ubuntu -s /bin/bash -g root -G sudo -u 1002 admin \
+              && echo 'admin:admin' | chpasswd
+
 
           # Get and install BngBlaster
-          RUN wget -O /tmp/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb https://github.com/rtbrick/bngblaster/releases/download/$TAG_NAME/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb
-          RUN apt-get install -y /tmp/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb
+          RUN wget -O /tmp/bngblaster.deb https://github.com/rtbrick/bngblaster/releases/download/$TAG_NAME/bngblaster-$TAG_NAME-ubuntu-24.04_amd64.deb --no-check-certificate \
+              && apt-get install -y /tmp/bngblaster.deb 
 
           COPY /examples /opt/bngblaster/
 
-          ENTRYPOINT bash
+          #expose port 
+          EXPOSE 8001 22 
+
+          ENTRYPOINT service ssh restart & bash
           EOF
 
       - name: Log in to GitHub Container Registry
